# imob_func

./: .gitignore  README.md  estrategia.py  jogador.py  negocio.py  propriedade.py  pyproject.toml  requirements.txt  test_imob.py
imob/: banco.py  cartorio.py  classes_de_dados.py  estrategia.py  jogador.py  jogo.py  negocio.py  propriedade.py  relatorio.py  rodada.py  simulacao.py  tabuleiro.py
imob_o/: banco.py  jogador.py  jogo.py  negocio.py  propriedade.py  relatorio.py  rodada.py  simulacao.py  tabuleiro.py
src/: estrategia.py  jogador.py  negocio.py  propriedade.py
tests/: conftest.py  test_banco.py  test_cartorio.py  test_imob.py  test_jogador.py  test_jogo.py  test_negocio.py  test_propriedade.py  test_rodada.py  test_tabuleiro.py
