[project]
name = "imob-func"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrsistent>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[tool.ruff.lint]
# Ativa todos os lints recomendados por padrão
select = ["E", "F", "W", "I", "N", "B", "UP"]

# E - pycodestyle errors
# F - pyflakes
# W - pycodestyle warnings
# I - isort
# N - pep8-naming
# B - flake8-bugbear
# UP - pyupgrade

